# Agente-Cripto

./: .env.example  .gitignore  .mutatest_run.sh  README.md  docker-compose.yml  pyproject.toml  run_shadow.py  run_shadow_loop.py  setup.cfg
.github/workflows/: ci.yml
contracts/: decision_v1.json
docs/: BYBIT_INTEGRACAO.md  PLANO.md  PLANO_ANALISTA.md  REVISAO_ACHADOS.md  REVISAO_RISK_ENGINE.md  mutation_result.txt
memory/: MEMORY.md  mutation-gate-no-concurrent-tests.md
src/bybit_agent/agent/: client.py  orchestrator.py  parser.py  prefilter.py  prompt.py
src/bybit_agent/domain/: instrument.py  money.py
src/bybit_agent/features/: indicators.py  liquidity.py  snapshot.py  structure.py
src/bybit_agent/marketdata/: clock.py  coherent.py  rest.py  scheduler.py
src/bybit_agent/persistence/: decision_log.py  postgres.py
src/bybit_agent/risk/: _validation.py  engine.py  policy.py  reward.py  sizing.py  validators.py
src/bybit_agent/runtime/: evaluation.py  loop.py
tests/contract/: test_decision_schema.py
tests/integration/: test_postgres_decision_log.py
tests/property/: test_risk_invariants.py
tests/unit/: test_mutation_tool.py  test_no_float_lint.py  test_spike_s2_client.py
tests/unit/agent/: test_client.py  test_orchestrator.py  test_parser.py  test_prefilter.py
tests/unit/domain/: test_money.py
tests/unit/features/: test_indicators.py  test_liquidity.py  test_snapshot.py  test_structure.py
tools/: gen_review_package.py
tools/lint/: no_float.py
tools/mutation/: mutate.py
tools/spikes/: s2_order_link_id_dedup.py
(+15 files in other folders)
