[project]
name = "bybit-agent"
version = "0.1.0"
description = "Bybit Risk-Constrained Trading Agent"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.9",
    "jsonschema>=4.23",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.115",
    "mypy>=1.13",
    "ruff>=0.8",
    "mutmut>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bybit_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["bybit_agent"]
warn_unreachable = true
disallow_any_explicit = false

[tool.coverage.run]
source = ["src/bybit_agent"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
